--- a/.github/workflows/auto_retrain.yml
+++ b/.github/workflows/auto_retrain.yml
@@ -1,5 +1,9 @@
 name: Automated ML Retraining
 
+permissions:
+  contents: write
+  actions: read
+
 on:
   # Manual trigger
   workflow_dispatch:
@@ -31,6 +35,7 @@ jobs:
         with:
           ref: main
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Set up Python
         uses: actions/setup-python@v4
