--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,10 @@ python-multipart>=0.0.6
 
 # Testing
 requests>=2.31.0
-httpx>=0.25.0
+httpx
 
 # Utilities
 python-dotenv>=1.0.0
 python-multipart==0.0.6
 schedule==1.2.0
+supabase
